<resources>
    <string name="app_name" translatable="false">MeetVideoCon</string>
    <string name="version" translatable="false">Version %1$s</string>

    <string name="dropbox_app_key" translatable="false">5qiq4z06ikagxfb</string>


    <string name="app_id" translatable="false">ca-app-pub-9243738527809292~4560010891</string>
    <string name="Vidxa_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Vidxa_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>



    <string name="domain_url_for_deeplinking" translatable="false">vidxa.infusiblecoder.com</string>



<!--  TODO  Do not touch Live Ads-->

<!--    <string name="app_id" translatable="false">ca-app-pub-9243738527809292~4560010891</string>-->
<!--    <string name="Vidxa_banner" translatable="false">ca-app-pub-7307921528560396/3335542298</string>-->
<!--    <string name="Vidxa_interstitial" translatable="false">ca-app-pub-7307921528560396/7434569405</string>-->

    <!--    one signal app id-->
    <string name="onsignalappid" translatable="false">99a6da8f-1974-46bb-b172-d4507d5ed3f4</string>


    <string name="privacy_url" translatable="false">https://docs.google.com/document/d/1tpnAdZp3p7ZWUMzfGlJJhYJm49qZ01R02KlCrMMOVOQ/edit?usp=sharing</string>


    <string name="ok">OK</string>
    <string name="email">Email ID</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="errEmailRequired">Enter email</string>
    <string name="errMeetingCode">Enter meeting id</string>
    <string name="errMeetingCodeInValid">Enter valid meeting id</string>
    <string name="errMeetingSubject">Enter meeting subject</string>
    <string name="errValidEmailRequired">Enter valid email</string>
    <string name="errPasswordRequired">Enter password</string>
    <string name="errPasswordTooShort">Password too short, enter minimum 6 characters!</string>
    <string name="err_internet">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="verify_email">Verify Your Email</string>
    <string name="verify">Verify</string>
    <string name="menu_home">Home</string>
    <string name="exit">Repeat this action to exit app</string>
    <string name="menu_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="err_mobile">Enter mobile</string>
    <string name="err_title">Enter title</string>
    <string name="err_valid_mobile">Enter valid mobile</string>
    <string name="email_exists">Email already exists</string>
    <string name="mobile_does_not_exists">Mobile doesn\'t exists</string>
    <string name="err_name">Enter name</string>
    <string name="permission_msg">This app needs permission to use some features. You can grant them in app settings.</string>
    <string name="permission_msg_never_checked">You have denied some permissions. Allow permissions from app settings.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="yes_grant_permission">Yes, Grant permission(s)</string>
    <string name="no">No</string>
    <string name="select_image">Select Image</string>
    <string name="from_camera">From Camera</string>
    <string name="pick_from_gallery">From Gallery</string>
    <string name="processing_image">Processing image</string>
    <string name="crop">Crop</string>
    <string name="uploading_image">Uploading image</string>
    <string name="no_history_found">History not available</string>
    <string name="no_events_found">Schedule not available</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="select_duration">Select duration</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="authenticating">Authenticating…</string>
    <string name="please_wait">Please wait…</string>
    <string name="failed_to_sent_email">Failed to send reset email!</string>
    <string name="we_have_sent_instructions">We have sent you instructions to reset your password!</string>
    <string name="new_meeting">New Meeting</string>
    <string name="meeting_code">Enter Meeting Code</string>
    <string name="meeting_history">History</string>
    <string name="subject">Subject</string>
    <string name="calendar">Calendar</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="join">Join</string>
    <string name="rejoin">Rejoin</string>
    <string name="schedule">Scheduler</string>
    <string name="schedule_meeting">Meeting Scheduler</string>
    <string name="continue_meeting">Continue</string>
    <string name="meeting_not_exist">Meeting doesn\'t exist.</string>
    <string name="start">Start</string>
    <string name="meeting_saved">Saved Success</string>
    <string name="meeting_scheduled">Meeting Scheduled</string>
    <string name="done">Done</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="update_now">Update Now</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="notification_recived">New Notification Received</string>
    <string name="meeting_title">Meeting Reminder</string>
    <string name="meeting_body">Your Meeting is Up, Make A Meeting Quick!!</string>
    <string name="copy_and_share_this_code_with_people_that_you_want_to_meet_with">Copy and share this code with people that you want to meet with.</string>
    <string name="copy_and_share_this_code_pc_or_web">Copy and share this code with people using browser Or PC to join the meeting with you.</string>
    <string name="schedule_meetin">Schedule Meeting</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="we_have_sent_verification_email_to">We have sent verification email so check your mail,
    open the link then press the verify button</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="forgot_password2">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="hi_nwelcome">Hi!\nWelcome</string>
    <string name="a_video_conferencing_app">A Video Conferencing App</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="register">Register</string>
    <string name="my_meeting">My Meeting</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="copy_to_invite_others">Copy to invite others</string>
    <string name="meeting_s_today">Meeting\'s Today</string>
    <string name="developer_email" translatable="false">infusiblecoder@gmail.com</string>
    <string name="_05_jun_2020" translatable="false">05-Jun-2020</string>
    <string name="language">Language</string>
    <string name="default_reminder_text">Meeting Reminder</string>
    <string name="Hi_txt">Hi, </string>


    <!--    language change stuff-->


    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">Hindi</string>

    <!--    Language Code-->

    <string name="en_code" translatable="false">en</string>
    <string name="hi_code" translatable="false">hi</string>

    <string name="darkmode">Dark Mode (beta)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="inviteemail">Email Invite</string>
    <string name="verifyemail">Please verify your email address and try again.</string>
    <string name="verificationemail">\"Verification email sent to \"</string>
    <string name="newversionisavaliable">\" is available to download. Downloading the latest update you will get the latest features, improvements and bug fixes of \"</string>
    <string name="scheduleadded">Schedule added successfully</string>
    <string name="scheduleupdated">Schedule updated successfully</string>
    <string name="couldnotadd">Could not add schedule</string>
    <string name="couldnotupdate">Could not update schedule</string>
    <string name="regfailed">\"Registration failed, \"</string>
    <string name="meetinglinkcopied">Meeting Link copied</string>
    <string name="noemailclient">There are no email clients installed.</string>
    <string name="remove_ads">Remove Ads</string>


</resources>